kubernetes-routing-example/01-namespace.yaml
# Namespace for our application
apiVersion: v1
kind: Namespace
metadata:
  name: myapp
  labels:
    name: myapp
